app/assets/styles/main.scss
@import url("https://fonts.googleapis.com/css2?family=ZCOOL+KuaiLe&display=swap");

* {
  box-sizing: border-box;
  outline: none;
  border: none;
  text-decoration: none;
  font-family: "ZCOOL KuaiLe", sans-serif;
}

::-webkit-scrollbar {
  display: none;
}

html,
body {
  padding: 0;
  margin: 0;
  transition: background-color 0.3s ease;
}

svg {
  display: block;
}

